spacing fixes

--- a/src/Components/BourbonGrid/BourbonGrid.module.scss
+++ b/src/Components/BourbonGrid/BourbonGrid.module.scss
@@ -4,7 +4,7 @@
 .grid_label {
 	text-align: center;
 	margin-top: 75px;
-	margin-bottom: 30px;
+	margin-bottom: 50px;
 	> h1 {
 		color: $blue-color;
 		font-size: 50px;
