--- a/src/Components/Hero/Hero.module.scss
+++ b/src/Components/Hero/Hero.module.scss
@@ -6,7 +6,7 @@
 	justify-content: center;
 	align-items: center;
 	margin-top: 75px;
-	margin-bottom: 30px;
+	margin-bottom: 50px;
 	> div:first-child {
 		> h3 {
 			color: #eee;
