--- a/src/Pages/BourbonPage/BourbonPage.module.scss
+++ b/src/Pages/BourbonPage/BourbonPage.module.scss
@@ -5,6 +5,7 @@
 	display: flex;
 	flex-direction: column;
 	padding: 15px;
+	margin-top: 35px;
 	color: #fff;
 	width: 100%;
 	> button:first-child {
