--- a/src/Pages/LoginPage/LoginPage.module.scss
+++ b/src/Pages/LoginPage/LoginPage.module.scss
@@ -5,7 +5,7 @@
 	font-size: 55px;
 	text-align: center;
 	margin-top: 75px;
-	margin-bottom: 30px;
+	margin-bottom: 50px;
 	@media (min-width: 400px) {
 		font-size: 75px;
 	}
